--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,17 +1,17 @@
 body
 {
     color: #333;
-    text-align: left;
-    font-family: "Arial";
-    font-size: 20px;
+    text-align: center;
+    font-family: Arial;
+    font-size: 16px;
     margin: 0;
     padding: 0;
 }
 
 #cabecera
 {
-    background:#333a;
-    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+    background:#33a;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
@@ -31,15 +31,23 @@ body
     width: 70%;
     padding: 0;
     text-align: left;
-    border: 1px solid #ddd;
+    border: 1px solid #DDD;
     margin: 0 auto;
 }
 
 #container h1
 {
-    font-size: 30px;
+    font-size: 20px;
 }
 #post
 {
     padding: 1em;
+}
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
